ACS-8423 Refactor